--- a/assets/scss/custom/_common.scss
+++ b/assets/scss/custom/_common.scss
@@ -221,7 +221,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        background: #000000;
+        background: $color-custom-yellow;
     }
 
     &::-webkit-scrollbar-thumb:hover {
