--- a/assets/scss/custom/_animate.scss
+++ b/assets/scss/custom/_animate.scss
@@ -50,6 +50,15 @@
     }
 }
 
+@keyframes overlaySlide {
+    25%, 75% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(100%);
+    }
+}
+
 
 .has-activeNavPages {
      .fadeInRight {
