--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -1,11 +1,17 @@
 {{#partial "page"}}
 
-{{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
+{{#unless (toLowerCase page.title) '==' 'store locator'}}
+    {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
+{{/unless}}
 
 <main class="page">
     {{#unless theme_settings.hide_contact_us_page_heading }}
         <h1 class="page-heading">{{page.title}}</h1>
     {{/unless}}
+
+    {{#if (toLowerCase page.title) '==' 'store locator'}}
+       {{> components/custom/page/store-locator-map }}
+    {{/if}}
 
     {{#if page.sub_pages}}
         <nav class="navBar navBar--sub">
