--- a/assets/scss/custom/_blocks.scss
+++ b/assets/scss/custom/_blocks.scss
@@ -825,6 +825,8 @@
 
 // * ------ Store Locator Page ------
 .storeLocator {
+    margin-bottom: 24px;
+
     &__wrapper {
         display: flex;
         gap: 32px;
@@ -916,6 +918,94 @@
         &.map-loading {
             &::after {
                 animation: overlaySlide 1.2s ease forwards;
+            }
+        }
+    }
+
+    + .page-content {
+        .form-locator-header {
+            padding: 50px 0;
+
+            @include smax-m {
+                padding: 30px 0;
+            };
+
+            @include smax-s {
+                padding: 16px 0;
+            };
+
+            .hero__rte {
+                p {
+                    margin-bottom: 0;
+                }
+            }
+            
+        }
+        .form-locator-wrapper {
+            max-width: 670px;
+            margin: 0 auto;
+            padding-left: 50px;
+            padding-right: 50px;
+            margin-bottom: 50px;
+
+            @include smax-m {
+                padding-left: 30px;
+                padding-right: 30px;
+                margin-bottom: 30px;
+            }; 
+
+            @include smax-s {
+                padding-left: 16px;
+                padding-right: 16px;
+                margin-bottom: 16px;
+            };
+
+            .form-row {
+                margin: 0;
+            }
+
+            .custom-form__block {
+                margin: 0;
+                margin-bottom: 20px;
+                border: none;
+                padding: 0;
+                font-weight: 300;
+
+                .strong  {
+                    font-weight: 400;
+                }
+                
+                label {
+
+                }
+
+                .form-actions {
+                    margin-top: 0;
+                }
+                
+                .button {
+                    width: 100%;
+                    font-size: 13px;
+                    line-height: 18px;
+                    letter-spacing: 1.3px;
+                    padding: 10px 18px;
+                    border-radius: 300px;
+                }
+            }
+
+            .form__legal {
+                p {
+                    font-size: 12px;
+                    font-style: italic;
+                    line-height: 12px;
+                    margin: 6px 0;
+                    color: rgba(33, 33, 33, 0.7);
+
+                    a {
+                        color: inherit;
+                        text-decoration: none;
+                    }
+                }
             }
         }
     }
