--- a/templates/components/custom/page/store-locator-map.html
+++ b/templates/components/custom/page/store-locator-map.html
@@ -1,4 +1,6 @@
-<div class="storeLocator">
+<div class="storeLocator wrapper">
+    <h1 class="page-heading">{{page.title}}</h1>
+
     <div class="storeLocator__wrapper">
         <div class="storeLocator__left">
             <div class="storeLocator__address customScrollbar">
