--- a/templates/components/custom/home/home-carousel-banner.html
+++ b/templates/components/custom/home/home-carousel-banner.html
@@ -26,7 +26,7 @@
                     {{theme_settings.home_banner_carousel_1_text}}
                 </p>
 
-                <a href="{{theme_settings.home_banner_carousel_1_link}}" class="homeSlickBanner__button button" data-aos="hero" data-aos-order="4">
+                <a href="{{theme_settings.home_banner_carousel_1_link}}" class="homeSlickBanner__button button button--icon" data-aos="hero" data-aos-order="4">
                     {{theme_settings.home_banner_carousel_1_button}}
                     <span class="icon icon--arrow-right">
                         <svg><use xlink:href="#icon-arrow-right"></use></svg>
@@ -53,7 +53,7 @@
                     {{theme_settings.home_banner_carousel_2_text}}
                 </p>
 
-                <a href="{{theme_settings.home_banner_carousel_2_link}}" class="homeSlickBanner__button button" data-aos="hero" data-aos-order="4">
+                <a href="{{theme_settings.home_banner_carousel_2_link}}" class="homeSlickBanner__button button button--icon" data-aos="hero" data-aos-order="4">
                     {{theme_settings.home_banner_carousel_2_button}}
                     <span class="icon icon--arrow-right">
                         <svg><use xlink:href="#icon-arrow-right"></use></svg>
