--- a/templates/components/custom/home/home-columns-banner.html
+++ b/templates/components/custom/home/home-columns-banner.html
@@ -19,7 +19,7 @@
                         </p>
 
                         <div class="homeColBanner__action text-center">
-                            <a href="{{theme_settings.home_col_banner_1_link}}" class="homeColBanner__button button color-2">
+                            <a href="{{theme_settings.home_col_banner_1_link}}" class="homeColBanner__button button button--icon color-2">
                                 {{theme_settings.home_col_banner_1_button}}
                                 <span class="icon icon--arrow-right">
                                     <svg><use xlink:href="#icon-arrow-right"></use></svg>
@@ -48,7 +48,7 @@
                     </p>
 
                     <div class="homeColBanner__action text-center">
-                        <a href="{{theme_settings.home_col_banner_2_link}}" class="homeColBanner__button button color-2">
+                        <a href="{{theme_settings.home_col_banner_2_link}}" class="homeColBanner__button button button--icon color-2">
                             {{theme_settings.home_col_banner_2_button}}
                             <span class="icon icon--arrow-right">
                                 <svg><use xlink:href="#icon-arrow-right"></use></svg>
@@ -77,7 +77,7 @@
                     </p>
 
                     <div class="homeColBanner__action text-center">
-                        <a href="{{theme_settings.home_col_banner_3_link}}" class="homeColBanner__button button color-2">
+                        <a href="{{theme_settings.home_col_banner_3_link}}" class="homeColBanner__button button button--icon color-2">
                             {{theme_settings.home_col_banner_3_button}}
                             <span class="icon icon--arrow-right">
                                 <svg><use xlink:href="#icon-arrow-right"></use></svg>
