--- a/templates/components/custom/home/home-full-banner.html
+++ b/templates/components/custom/home/home-full-banner.html
@@ -16,7 +16,7 @@
                 {{theme_settings.home_fullwidth_banner_text}}
             </p>
 
-            <a href="{{theme_settings.home_fullwidth_banner_link}}" class="homeFullBanner__button button" data-aos="hero" data-aos-order="4">
+            <a href="{{theme_settings.home_fullwidth_banner_link}}" class="homeFullBanner__button button button--icon" data-aos="hero" data-aos-order="4">
                 {{theme_settings.home_fullwidth_banner_button}}
                 <span class="icon icon--arrow-right">
                     <svg><use xlink:href="#icon-arrow-right"></use></svg>
