--- a/templates/components/custom/home/home-product-block.html
+++ b/templates/components/custom/home/home-product-block.html
@@ -27,7 +27,7 @@
                         <div class="content-bottom">
                             <p class="customBlockBanner__description body-size-3 text-white mb-16 mb-10-mobile" data-aos="hero" data-aos-order="2">{{theme_settings.home_product_banner_text}}</p>
 
-                            <a href="{{theme_settings.home_product_banner_link}}" class="customBlockBanner__button button uppercase" data-aos="hero" data-aos-order="3">
+                            <a href="{{theme_settings.home_product_banner_link}}" class="customBlockBanner__button button button--icon uppercase" data-aos="hero" data-aos-order="3">
                                 {{theme_settings.home_product_banner_button}}
                                 <span class="icon icon--arrow-right">
                                     <svg><use xlink:href="#icon-arrow-right"></use></svg>
