--- a/templates/components/custom/home/home-section-banner-column.html
+++ b/templates/components/custom/home/home-section-banner-column.html
@@ -17,7 +17,7 @@
                     {{theme_settings.home_banner_2col_item1_text}}
                 </p>
 
-                <a href="{{theme_settings.home_banner_2col_item1_link}}" class="sectionBannerCol__button button" data-aos="hero" data-aos-order="3">
+                <a href="{{theme_settings.home_banner_2col_item1_link}}" class="sectionBannerCol__button button button--icon" data-aos="hero" data-aos-order="3">
                     {{theme_settings.home_banner_2col_item1_button}}
                     <span class="icon icon--arrow-right">
                         <svg><use xlink:href="#icon-arrow-right"></use></svg>
@@ -44,7 +44,7 @@
                     {{theme_settings.home_banner_2col_item2_text}}
                 </p>
 
-                <a href="{{theme_settings.home_banner_2col_item2_link}}" class="sectionBannerCol__button button" data-aos="hero" data-aos-order="3">
+                <a href="{{theme_settings.home_banner_2col_item2_link}}" class="sectionBannerCol__button button button--icon" data-aos="hero" data-aos-order="3">
                     {{theme_settings.home_banner_2col_item2_button}}
                     <span class="icon icon--arrow-right">
                         <svg><use xlink:href="#icon-arrow-right"></use></svg>
