--- a/templates/components/custom/home/section-home-account.html
+++ b/templates/components/custom/home/section-home-account.html
@@ -14,14 +14,14 @@
             </p>
 
             <div class="homeAccount__buttons">
-                <a href="/login.php?action=create_account" class="button color-2">
+                <a href="/login.php?action=create_account" class="button button--icon color-2">
                     Create a wholesale account
                     <span class="icon icon--arrow-right">
                         <svg><use xlink:href="#icon-arrow-right"></use></svg>
                     </span>
                 </a>
 
-                <a href="/login.php" class="button color-2">
+                <a href="/login.php" class="button button--icon color-2">
                     Log In
                     <span class="icon icon--arrow-right">
                         <svg><use xlink:href="#icon-arrow-right"></use></svg>
