--- a/templates/components/page/contact-us-form-locator.html
+++ b/templates/components/page/contact-us-form-locator.html
@@ -82,7 +82,9 @@
         {{{forms.contact.recaptcha.markup}}}
         <div class="custom-form__block">
             <div class="form-actions">
-                <input class="button button--primary" type="submit" value="{{slang 'forms.contact_us.submit' }}">
+                <button class="button button--primary" type="submit">
+                    {{lang 'forms.contact_us.submit' }}
+                </button>
             </div>
         </div>
 
