--- a/assets/scss/components/citadel/nav/_nav.scss
+++ b/assets/scss/components/citadel/nav/_nav.scss
@@ -39,6 +39,13 @@
     @include checkRadioBase();
     @include checkBox-base();
 
+    font-size: 11.6px;
+    font-weight: 300;
+    color: $color-custom-black;
+    letter-spacing: 0;
+    display: inline-flex;
+    align-items: center;
+
     &::before,
     &::after {
         top: 50%; // 1
@@ -46,6 +53,8 @@
 
     &::before {
         margin-top: -$checkRadio-outerSize / 2;
+        border-radius: 0;
+        border-color: #646464;
     }
 
     &::after {
@@ -63,9 +72,17 @@
     &.is-checked,
     &.is-selected {
         @include checkRadioBase--checked();
+
+        &::after{
+            background: var(--COLOR-PRIMARY);
+            box-shadow: inset 0 0 0 2px var(--COLOR-BG);
+        }
     }
 }
 
+.facetedSearch-clearLink {
+    display: none;
+}
 
 // NavList action close
 // -----------------------------------------------------------------------------
