--- a/assets/scss/custom/_function.scss
+++ b/assets/scss/custom/_function.scss
@@ -1,3 +1,28 @@
+:root {
+    --duration: 0.6s;
+    --collection-nav-height: 58px;
+    --menu-height: 118px;
+    --border-width: 0;
+    --full-screen: 1317px;
+    --sidebar-width: 288px;
+    --outer: 50px;
+    --gutter: 32px;
+    --COLOR-BORDER-HAIRLINE: #f7f7f7;
+    --link: #cba052;
+    --RADIUS: 300px;
+    --ICON-STROKE-WIDTH: 1px;
+    --COLOR-BG: #ffffff;
+    --COLOR-PRIMARY: #cba052;
+
+    @include smax-m {
+        --outer: 30px;
+    }; 
+
+    @include smax-s {
+        --outer: 16px;
+    };
+}
+
 // Header Sticky
 // -----------------------------------------------------------------------------
 .header {
@@ -10,4 +35,245 @@
         animation-duration: 0.25s;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     }
+}
+
+// * ------ Toggle Popout Product Listing Page ------
+.popout__toggle {
+    .popout__toggleable-text {
+        font-size: 10px;
+        text-transform: uppercase;
+        letter-spacing: 1.2px;
+        line-height: 10px;
+        text-align: center;
+        vertical-align: middle;
+        color: $color-custom-black;
+        white-space: nowrap;
+        font-weight: 300;
+
+        @include smax-s { 
+            font-size: 9px;
+            line-height: 9px;
+            letter-spacing: 1.05px;
+        }; 
+
+        @include smin-s {
+            display: grid;
+            grid-template-columns: 1fr;
+            justify-items: start;
+
+            .popout__expanded-show, 
+            .popout__expanded-hide {
+                transition: opacity .25s ease-in-out, visibility .25s;
+                grid-row-start: 1;
+                grid-column-start: 1;
+                min-height: 100%;
+            }
+        }; 
+
+        .filter-count {
+            margin-left: 4px;
+        }
+    }
+
+    @include smin-s {
+        &[aria-expanded=true] .popout__expanded-show,
+        &[aria-expanded=false] .popout__expanded-hide {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        &[aria-expanded=false] .popout__expanded-show, 
+        &[aria-expanded=true] .popout__expanded-hide {
+            opacity: 1;
+            visibility: visible;
+        }
+    };
+
+    @include smax-s {
+        .popout__expanded-hide {
+            display: none;
+        }
+    }; 
+
+    .icon-filter {
+        display: inline-block;
+        @include square(14);
+        vertical-align: middle;
+        fill: none;
+        stroke-width: 1px;
+        stroke: currentColor;
+        margin: -5px 7px -5px 0;
+        transition: transform .3s cubic-bezier(.215,.61,.355,1);
+    }
+
+    .icon-nav-arrow-down {
+        @include square(16);
+        transition: transform .3s ease;
+        margin-left: 4px;
+        fill: none;
+    }
+
+    &[aria-expanded=true] .icon-nav-arrow-down {
+        transform: rotate(180deg);
+    }
+}
+
+// * ------ Dropdown Effect Show ------
+.has-effect-dropdown {
+    position: absolute;
+    background-color: var(--COLOR-BG);
+    border: 1px solid var(--COLOR-BORDER-HAIRLINE);
+    bottom: 100%;
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    margin: 0;
+    padding: 10px 0;
+    max-width: 100vw;
+    min-height: 30px;
+    z-index: 100;
+    list-style-type: none;
+    pointer-events: none;
+    max-height: 90vh;
+    top: 100%;
+    bottom: initial;
+    right: 0;
+    width: 0;
+    min-width: 0;
+    margin-top: 1px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: opacity .2s ease, width .2s ease, visibility .2s;
+
+    .is-active & {
+        width: 200px;
+        transition: opacity .4s ease, width .4s ease, visibility .4s;
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+}
+
+.productListingPage__main {
+    position: relative;
+    align-items: flex-start;
+    display: flex;
+    flex-flow: row;
+
+    // * ------ Product Listing Sidebar ------
+    .productListingPage__sidebar {
+        display: flex;
+        flex-direction: column;
+        background: var(--COLOR-BG);
+        border-width: 0 1px 1px 0;
+        border-style: solid;
+        border-color: var(--COLOR-BORDER-HAIRLINE);
+        visibility: hidden;
+        overflow: hidden;
+        position: sticky;
+        position: -webkit-sticky;
+        top: var(--collection-nav-height);
+        height: calc(var(--full-screen) - var(--collection-nav-height));
+        min-width: 0;
+        margin-right: -2px;
+        transition-property: min-width, margin, transform, visibility;
+        transition-duration: var(--duration);
+        transition-timing-function: cubic-bezier(.215,.61,.355,1);
+
+        @include smin-s {
+            width: 0;
+        }; 
+
+        @include smax-s {
+            position: fixed;
+            z-index: 6100;
+            top: 0;
+            height: 100%;
+            transform: translate(-100%);
+            max-width: var(--sidebar-width);
+            transition: transform var(--duration) cubic-bezier(.215,.61,.355,1), visibility var(--duration);
+        }; 
+    
+        // * ------ has header sticky ------
+        --border-width: 0px;
+        top: calc(var(--collection-nav-height) + var(--menu-height) - var(--border-width));
+        height: calc(var(--full-screen) - var(--collection-nav-height) - var(--menu-height) + var(--border-width));
+    
+        &.is-show {
+            visibility: visible;
+            transform: translateZ(0);
+            min-width: var(--sidebar-width);
+            
+            @include smin-s {
+                margin-right: calc((var(--outer) - var(--gutter))* -1);
+            }; 
+        }
+
+        #facetedSearch {
+            padding: 24px 18px;
+        }
+
+        #facetedSearch-navList {
+            padding: 20px 32px 20px 32px;
+            margin-top: 0;
+        }
+    }
+    
+    .productListingPage__products {
+        position: relative;
+        flex-grow: 1;
+        padding: var(--gutter) var(--outer);
+        background-color: blue;
+    }
+}
+
+.collection__sidebar__head {
+    position: relative;
+    width: 100%;
+    padding: 24px 18px;
+    border-bottom: 1px solid rgb(244, 242, 240);
+
+    h3 {
+        font-size: 14px;
+        letter-spacing: 1.68px;
+        line-height: 14px;
+        text-transform: uppercase;
+        color: $color-custom-black;
+        font-family: $body-font-family;
+        margin: 0;
+    }
+
+    .collection__sidebar__close {
+        --icon-size: 24px;
+        position: absolute;
+        top: 50%;
+        right: 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 5px;
+        color: var(--link);
+        background: transparent;
+        border-radius: var(--RADIUS);
+        font-size: 0;
+        text-decoration: none;
+        transform: translate3d(0, -50%, 0);
+        transition: color .3s ease;
+
+        .icon {
+            display: block;
+            fill: currentColor;
+            transition: transform .3s;
+            pointer-events: none;
+        }
+    }
+}
+
+.icon {
+    width: var(--icon-size, 20px);
+    height: var(--icon-size, 20px);
+    vertical-align: middle;
+    fill: none;
+    stroke-width: var(--ICON-STROKE-WIDTH);
+    stroke: currentColor;
 }
