--- a/templates/components/faceted-search/range-form.html
+++ b/templates/components/faceted-search/range-form.html
@@ -35,8 +35,8 @@
                 <span id="max_price_description" class="aria-description--hidden">{{lang 'search.faceted.range.max-description'}}</span>
             </div>
 
-            <div class="form-field">
-                <button class="button button--small" type="submit">
+            <div class="form-field form-field--full">
+                <button class="button button--primary" type="submit">
                     {{lang 'search.faceted.range.update'}}
                 </button>
             </div>
