--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -364,12 +364,17 @@
     @include clearfix();
     margin-left: -$form-minMaxRow-column-gutter;
     margin-right: -$form-minMaxRow-column-gutter;
+    display: flex;
+    flex-wrap: wrap;
 
     .form-field {
-        @include grid-column(4);
-        margin-bottom: 0;
         padding-left: $form-minMaxRow-column-gutter;
         padding-right: $form-minMaxRow-column-gutter;
+        width: 50%;
+
+        &.form-field--full {
+            width: 100%;
+        }
     }
 
     .button {
