--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -55,7 +55,7 @@
         {{~inject 'token' settings.storefront_api.token}}
         {{~inject 'money' settings.money}}
     </head>
-    <body class="page-type-{{page_type}}">
+    <body class="page-type-{{page_type}}{{#if (toLowerCase page.title) '==' 'store locator'}} storeLocator{{/if}}">
         <svg data-src="{{cdn 'img/icon-sprite.svg'}}" class="icons-svg-sprite"></svg>
 
         {{> components/common/header }}
